Debug boutons filtres, correction contraste + code final

--- a/assets/style.css
+++ b/assets/style.css
@@ -99,7 +99,8 @@ body {
 }
 
 #gallery {
-	/*	min-height: 100vh; */
+	
+	min-height: 100vh; 
 }
 .title{
 	text-align: center;
@@ -109,8 +110,8 @@ body {
 	justify-content: center;
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #fff;
-	background-color: #63592C;
+	color: #000000;
+	background-color: #BEB45A;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
